force-app/main/default/objects/BypassSettings__c/BypassSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides bypass settings to specific profiles and/or users.</description>
    <label>Bypass - Settings</label>
</CustomObject>