force-app/main/default/objects/BypassSettings__c/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users / Profiles with this set to true will not trigger flows referencing this custom setting.</description>
    <inlineHelpText>Set this to true to bypass flows. Helpful for data migrations / adjustments / sync and for testing.</inlineHelpText>
    <label>Flows</label>
    <type>Checkbox</type>
</CustomField>