force-app/main/default/objects/BypassSettings__c/fields/Triggers__c.field-meta.xml
<CustomField>
    <fullName>Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users / Profiles with this set to true will not trigger triggers referencing this custom setting.</description>
    <inlineHelpText>Set this to true to bypass triggers. Helpful for data migrations / adjustments / sync and for testing.</inlineHelpText>
    <label>Triggers</label>
    <type>Checkbox</type>
</CustomField>