force-app/main/default/objects/BypassSettings__c/fields/ValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users / Profiles with this set to true will not trigger validation rules referencing this custom setting.</description>
    <inlineHelpText>Set this to true to bypass validation rules. Helpful for data migrations / adjustments / sync and for testing.</inlineHelpText>
    <label>Validation Rules</label>
    <type>Checkbox</type>
</CustomField>